<resources>
    <string name="app_name">FoodApp</string>

    <string name="hi_n_welcome_to_your_app">Hi,\nWelcome to your app</string>

    <string name="your_app_tag_line">Your app tag line</string>

    <string name="forget_password">Forget Password?</string>

    <string name="password">Password</string>

    <string name="username">Username</string>

    <string name="sign_in_to_continue">Sign In to continue</string>

    <string name="hello_there_welcome_back">Hello there,\nWelcome Back</string>

    <string name="go">GO</string>

    <string name="new_user_sign_up">New User? SIGN UP</string>

    <string name="welcome">Welcome</string>

    <string name="signup_to_start_your_new_journey">SignUp to start your new journey</string>

    <string name="full_name">Full Name</string>

    <string name="email_id">Email Id</string>

    <string name="phone_number">Phone Number</string>

    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">Sign up</string>
    <string name="default_web_client_id">407635338178-9caoja01nj9dubilq8jnf8gno0k4csub.apps.googleusercontent.com</string>
</resources>