<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    android:padding="16dp"
    tools:context=".Activities.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/white_bg_full_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:includeFontPadding="false"
            android:text="@string/welcome"
            android:textColor="#000"
            android:textSize="25sp"
            android:transitionName="@string/welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_in_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:includeFontPadding="false"
            android:text="@string/signup_to_start_your_new_journey"
            android:textSize="18sp"
            android:transitionName="@string/signup_to_start_your_new_journey"
            app:layout_constraintEnd_toEndOf="@+id/welcome_message"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/welcome_message"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullName"
            style="@style/CustomEditTextTheme"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/full_name"
            app:errorEnabled="false"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_bg_stroke"
                android:inputType="textPersonName"
                android:textColor="@color/dark_blue"

                tools:textColorHint="@color/dark_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/CustomEditTextTheme"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/username"

            android:transitionName="@string/username"
            app:boxBackgroundMode="none"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/fullName"

            app:layout_constraintStart_toStartOf="@+id/fullName"

            app:layout_constraintTop_toBottomOf="@+id/fullName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_bg_stroke"
                android:inputType="text"
                android:textColor="@color/dark_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/CustomEditTextTheme"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email_id"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_bg_stroke"
                android:inputType="textEmailAddress"
                tools:textColorHint="@color/dark_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumber"
            style="@style/CustomEditTextTheme"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/phone_number"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_bg_stroke"
                android:inputType="number"
                tools:textColorHint="@color/dark_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/CustomEditTextTheme"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            android:transitionName="@string/password"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_bg_stroke"
                android:inputType="textPassword"
                tools:textColorHint="@color/dark_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/red_bg_full_corner"
            android:includeFontPadding="false"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:transitionName="@string/sign_up"
            app:layout_constraintBottom_toTopOf="@+id/alreadyHaveAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alreadyHaveAccount"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="16dp"
            android:singleLine="false"
            android:text="@string/already_have_an_account_login"
            android:transitionName="sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>